Arquivo README.md arrumado

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,9 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
+
+# Ignorar a pasta "documentação"
+/documentação/
+
+# Ignorar o arquivo "pagina_estoque.jpg"
+pagina_estoque.jpg
