--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,8 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
 
+# Ignorar a pasta "documentação"
+/documentação/
+
+# Ignorar o arquivo "pagina_estoque.jpg"
+pagina_estoque.jpg
